# RL-based-Obstacle-Avoidance-Soft-Continuum-Robot

./: .gitignore  README.md  __init__.py  environment.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
Keras/: DDPG.py  __init__.py  train.sh
Keras/reward_visualization/: reward_vis.py
Pytorch/: __init__.py  ddpg.py  ddpg_agent.py  model.py  train.sh
Pytorch/reward_visualization/: reward_vis.py
Reinforcement Learning/: AmorphousSpace.py  PolygonSpace.py  env.py
Tests/: DDPG_keras_test.py  DDPG_pytorch_test.py  _bootstrap.py  amorphous_space_test.py  polygon_space_test.py
continuum_rl/: __init__.py  artifacts.py  cli.py  env.py  gradio_demo.py  gym_compat.py  health.py  hydra_app.py  hydra_config.py  spaces.py  tracking.py
continuum_rl/conf/: __init__.py  config.yaml
continuum_rl/conf/task/: __init__.py  gradio_demo.yaml  keras_eval_smoke.yaml  keras_reward_vis.yaml  keras_train.yaml  paper_figures.yaml  (+3 more)
continuum_rl/data/: __init__.py
continuum_rl/visualization/: __init__.py  data.py  figures.py  pipeline.py  rollouts.py  stats.py  style.py
continuum_robot/: utils.py
kinematics/: forward_velocity_kinematics.py
scripts/: __init__.py  export_dependency_files.py
tests/: test_artifact_metadata.py  test_cli.py  test_dependency_exports.py  test_env_contract.py  test_gradio_demo.py  test_hydra_config.py  test_keras_smoke.py  test_packaging_metadata.py  test_paper_figures.py  test_path_resolution.py  test_pytorch_smoke.py  test_rl_correctness.py  test_robotics_correctness.py  test_run_manifests.py  test_run_wrapper.py  test_tracking.py
